--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -3,6 +3,6 @@ header
     li 
       a(href="/") home
     li 
-      a(href="/login") login 
+      a(href="/login") add quotes
     li 
       a(href="/signup") signup 
