--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ html(lang="en")
     body 
 
         
-        
+        include navigation.pug
         h1 LETSS GOOO!!!!
         ul
             each val in quotes
