--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -3,6 +3,5 @@ header
     li 
       a(href="/") home
     li 
-      a(href="/login") add quotes
-    li 
-      a(href="/signup") signup 
+      a(href="/login") add quotes :D please
+
