add user name in dashboard & some cleanups

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -8,7 +8,14 @@ html(lang="en")
 
     include navigation.pug
 
-    h1 DASHBOARD
+
+    h1 DASHBOARD 
+
+    p hello 
+        b #{name}
+    p Start by adding some good quotes :D
+
+    
     
     form(action="/dashboard", method="post") 
         div 
