--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -4,4 +4,7 @@ header
       a(href="/") home
     li 
       a(href="/login") add quotes :D please
-
+    li 
+      a(href="/api") API
+    li 
+      a(href="/api/random") random quote
