open api in new tab

--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -5,6 +5,6 @@ header
     li 
       a(href="/login") add quotes :D please
     li 
-      a(href="/api") API
+      a(href="/api", target="_blank") API
     li 
-      a(href="/api/random") random quote
+      a(href="/api/random", target="_blank") random quote
